# beat-partner

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_ai_model_management.sql  003_reference_tracks.sql  004_lyrics.sql  005_vocal_production.sql  006_vocal_editing_guides.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  audio.rs  lyrics.rs  mod.rs  projects.rs  settings.rs  vocals.rs
src-tauri/src/models/: audio.rs  llamacpp.rs  lyrics.rs  mod.rs  ollama.rs  openrouter.rs  project.rs  vocal_production.rs
src-tauri/src/services/: ai_service.rs  audio_service.rs  cloud_service.rs  hardware_service.rs  llamacpp_service.rs  lyrics_service.rs  mod.rs  ollama_service.rs  project_service.rs  settings_service.rs  vocal_production_service.rs
src/components/features/: ChatEmptyState.tsx  ChatMessage.tsx  CreateProjectDialog.tsx  FirstRunModelSetup.tsx  HardwareInfoCard.tsx  InstalledModelsList.tsx  ModelManager.tsx  ModelRecommendationsPanel.tsx  (+3 more)
src/constants/: navigation.ts  vocalPresets.ts
src/services/: aiApi.ts  audioApi.ts  lyricsApi.ts  projectApi.ts  settingsApi.ts  tauri.ts  vocalApi.ts
src/stores/: aiStore.ts  appStore.ts  audioStore.ts  lyricsStore.ts  projectStore.ts  settingsStore.ts  vocalProductionStore.ts
src/styles/: index.css
src/types/: ai.ts  app.ts  audio.ts  index.ts  lyrics.ts  project.ts  vocal.ts
(+36 files in other folders)
