[package]
name = "beat-partner"
version = "0.1.0"
description = "Desktop companion for music production with AI assistance"
authors = ["you"]
license = "MIT"
edition = "2021"

[lib]
name = "beat_partner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs-next = "2"
sysinfo = "0.33"
eventsource-stream = "0.2"
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "aac"] }
rustfft = "6.2"
realfft = "3.4"
sha2 = "0.10"
